--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
+!**/src/main/**/build/:
 !**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
 
-application.properties
+**/application.properties
